--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -1,36 +1,44 @@
 /* --- Variables --- */
 /* --- Mixins --- */
-/* line 32, ../sass/styles.scss */
+/* line 28, ../sass/styles.scss */
 body, html, .container {
   margin: 0px;
   height: 100% !important;
   width: 100% !important;
 }
 
-/* line 39, ../sass/styles.scss */
-.slide {
+/* line 34, ../sass/styles.scss */
+.max-width-container {
+  width: 90%;
+  max-width: 950px;
+  display: inline-block;
+  text-align: center;
+}
+
+/* line 42, ../sass/styles.scss */
+.slide, .image-slide, .title-slide, .about-slide, .themes-slide, .projects-slide, .footer-slide {
   text-align: center;
   min-height: 400px;
-  padding: 100px 60px 100px 80px;
+  padding: 40px 0px;
 }
-/* line 44, ../sass/styles.scss */
-.slide .header {
+/* line 48, ../sass/styles.scss */
+.slide .header, .image-slide .header, .title-slide .header, .about-slide .header, .themes-slide .header, .projects-slide .header, .footer-slide .header {
   text-align: center;
   font-family: "Raleway", Helvetica, Arial, Sans-serif;
   font-size: 34px;
   text-transform: uppercase;
   font-weight: 300;
   padding: 6px;
-  margin-bottom: 30px;
-  border-bottom: 1px solid #cccccc;
+  margin: 30px 0;
+  border-bottom: 1px solid #CCC;
 }
-/* line 55, ../sass/styles.scss */
-.slide .header.dark-bg {
+/* line 59, ../sass/styles.scss */
+.slide .header.dark-bg, .image-slide .header.dark-bg, .title-slide .header.dark-bg, .about-slide .header.dark-bg, .themes-slide .header.dark-bg, .projects-slide .header.dark-bg, .footer-slide .header.dark-bg {
   color: #EEE;
 }
 
-/* line 65, ../sass/styles.scss */
-.slide.image-slide .background-filter {
+/* line 70, ../sass/styles.scss */
+.image-slide .background-filter {
   position: absolute;
   top: 0px;
   left: 0px;
@@ -40,23 +48,24 @@ body, html, .container {
   opacity: 0.3;
 }
 
-/* line 77, ../sass/styles.scss */
-.slide.title-slide {
+/* line 84, ../sass/styles.scss */
+.title-slide {
   background-size: cover !important;
   background: url("../images/hero_blur.jpg") no-repeat center center fixed;
   height: 100%;
   overflow: hidden;
+  padding: 0px;
 }
-/* line 87, ../sass/styles.scss */
-.slide.title-slide .slide-content {
+/* line 96, ../sass/styles.scss */
+.title-slide .slide-content {
   position: relative;
   top: 50%;
   -webkit-transform: translateY(-50%);
   -ms-transform: translateY(-50%);
   transform: translateY(-50%);
 }
-/* line 90, ../sass/styles.scss */
-.slide.title-slide .slide-content .slide-header {
+/* line 99, ../sass/styles.scss */
+.title-slide .slide-content .slide-header {
   position: relative;
   font-size: 90px;
   color: white;
@@ -64,28 +73,65 @@ body, html, .container {
   text-transform: uppercase;
   font-family: "Montserrat", Helvetica, Arial, Sans-serif;
 }
-/* line 99, ../sass/styles.scss */
-.slide.title-slide .slide-content .divider, .slide.title-slide .slide-content .subtext {
+@media (max-width: 770px) {
+  /* line 99, ../sass/styles.scss */
+  .title-slide .slide-content .slide-header {
+    font-size: 60px;
+  }
+}
+@media (max-width: 550px) {
+  /* line 99, ../sass/styles.scss */
+  .title-slide .slide-content .slide-header {
+    font-size: 45px;
+  }
+}
+/* line 115, ../sass/styles.scss */
+.title-slide .slide-content .divider, .title-slide .slide-content .subtext {
   position: relative;
   top: -25px;
 }
-/* line 107, ../sass/styles.scss */
-.slide.title-slide .slide-content .divider hr {
+@media (max-width: 770px) {
+  /* line 115, ../sass/styles.scss */
+  .title-slide .slide-content .divider, .title-slide .slide-content .subtext {
+    top: -15px;
+  }
+}
+@media (max-width: 550px) {
+  /* line 115, ../sass/styles.scss */
+  .title-slide .slide-content .divider, .title-slide .slide-content .subtext {
+    top: -10px;
+  }
+}
+@media (max-width: 450px) {
+  /* line 115, ../sass/styles.scss */
+  .title-slide .slide-content .divider, .title-slide .slide-content .subtext {
+    top: -8px;
+  }
+}
+/* line 133, ../sass/styles.scss */
+.title-slide .slide-content .divider hr {
   margin-top: 8px;
   margin-bottom: 2px;
 }
-/* line 111, ../sass/styles.scss */
-.slide.title-slide .slide-content .divider .hr-top {
+@media (max-width: 770px) {
+  /* line 133, ../sass/styles.scss */
+  .title-slide .slide-content .divider hr {
+    margin-top: 3px;
+    margin-bottom: 2px;
+  }
+}
+/* line 142, ../sass/styles.scss */
+.title-slide .slide-content .divider .hr-top {
   width: 750px;
   max-width: 85%;
 }
-/* line 115, ../sass/styles.scss */
-.slide.title-slide .slide-content .divider .hr-bottom {
+/* line 146, ../sass/styles.scss */
+.title-slide .slide-content .divider .hr-bottom {
   width: 800px;
   max-width: 90%;
 }
-/* line 121, ../sass/styles.scss */
-.slide.title-slide .slide-content .subtext {
+/* line 152, ../sass/styles.scss */
+.title-slide .slide-content .subtext {
   color: #EEE;
   font-family: "Open Sans", Helvetica, Arial, Sans-serif;
   font-size: 30px;
@@ -94,16 +140,32 @@ body, html, .container {
   text-shadow: 0px 0px 16px rgba(0, 0, 0, 0.3);
   letter-spacing: 2px;
 }
+@media (max-width: 770px) {
+  /* line 152, ../sass/styles.scss */
+  .title-slide .slide-content .subtext {
+    font-size: 20px;
+  }
+}
+@media (max-width: 450px) {
+  /* line 152, ../sass/styles.scss */
+  .title-slide .slide-content .subtext {
+    font-size: 12px;
+  }
+}
 
-/* line 138, ../sass/styles.scss */
-.slide.about-slide {
-  -webkit-box-shadow: rgba(0, 0, 0, 0.8) 0px 0px 65px;
+/* line 176, ../sass/styles.scss */
+.about-slide {
   -moz-box-shadow: rgba(0, 0, 0, 0.8) 0px 0px 65px;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.8) 0px 0px 65px;
   box-shadow: rgba(0, 0, 0, 0.8) 0px 0px 65px;
   background: url("../images/agsquare.png");
 }
-/* line 147, ../sass/styles.scss */
-.slide.about-slide .row.skills .icon-description {
+/* line 185, ../sass/styles.scss */
+.about-slide .skills .skills-col {
+  padding: 0px 35px;
+}
+/* line 189, ../sass/styles.scss */
+.about-slide .skills .icon-description {
   height: 40px;
   line-height: 40px;
   font-family: "Raleway", Helvetica, Arial, Sans-serif;
@@ -111,26 +173,26 @@ body, html, .container {
   font-weight: 300;
   color: black;
 }
-/* line 156, ../sass/styles.scss */
-.slide.about-slide .row.skills img {
-  margin-bottom: 26px;
+/* line 198, ../sass/styles.scss */
+.about-slide .skills img {
+  padding-bottom: 26px;
   opacity: 0.8;
   height: 120px;
   width: auto;
 }
-/* line 162, ../sass/styles.scss */
-.slide.about-slide .row.skills img:hover {
+/* line 205, ../sass/styles.scss */
+.about-slide .skills img:hover {
   opacity: 1;
 }
-/* line 169, ../sass/styles.scss */
-.slide.about-slide .row.divider-row .divider {
+/* line 212, ../sass/styles.scss */
+.about-slide .divider-row .divider {
   margin: 50px auto 70px;
   width: 100%;
-  background: #cccccc;
+  background: #CCC;
   height: 1px;
 }
-/* line 180, ../sass/styles.scss */
-.slide.about-slide .row.testimonials blockquote {
+/* line 223, ../sass/styles.scss */
+.about-slide .testimonials blockquote {
   text-align: left;
   border-color: #CCC;
   border-width: 3px;
@@ -139,40 +201,42 @@ body, html, .container {
   margin: 14px;
   padding-right: 30px;
 }
-/* line 189, ../sass/styles.scss */
-.slide.about-slide .row.testimonials blockquote footer {
+/* line 232, ../sass/styles.scss */
+.about-slide .testimonials blockquote footer {
   margin-top: 8px;
 }
 
-/* line 198, ../sass/styles.scss */
-.slide.themes-slide {
+/* line 241, ../sass/styles.scss */
+.themes-slide {
   background-size: cover !important;
-  background: url("../images/bokeh.jpg") no-repeat center center fixed;
+  background: url("../images/blueGradient.jpg") no-repeat center center fixed;
 }
-/* line 202, ../sass/styles.scss */
-.slide.themes-slide .subheader {
+/* line 247, ../sass/styles.scss */
+.themes-slide .subheader {
   letter-spacing: 2px;
   margin-bottom: 10px;
   margin-top: 20px;
   font-family: "Montserrat", Helvetica, Arial, Sans-serif;
   text-transform: uppercase;
   font-size: 30px;
-  color: #CCC;
+  color: #FFF;
   opacity: 0.7;
 }
-/* line 213, ../sass/styles.scss */
-.slide.themes-slide .theme-frame {
+/* line 258, ../sass/styles.scss */
+.themes-slide .theme-frame {
   padding: 15px;
-  margin: 20px;
   background: rgba(255, 255, 255, 0.4);
+  width: 100%;
+  max-width: 350px;
+  display: inline-block;
 }
-/* line 218, ../sass/styles.scss */
-.slide.themes-slide .theme-frame .theme-container {
+/* line 266, ../sass/styles.scss */
+.themes-slide .theme-frame .theme-container {
   text-align: center;
   overflow: hidden;
 }
-/* line 222, ../sass/styles.scss */
-.slide.themes-slide .theme-frame .theme-container img {
+/* line 270, ../sass/styles.scss */
+.themes-slide .theme-frame .theme-container img {
   margin: 0 -50%;
   display: inline-block;
   height: 400px;
@@ -180,17 +244,17 @@ body, html, .container {
   width: auto;
   transition: opacity 0.5s;
 }
-/* line 231, ../sass/styles.scss */
-.slide.themes-slide .theme-frame .theme-container img:hover {
+/* line 279, ../sass/styles.scss */
+.themes-slide .theme-frame .theme-container img:hover {
   opacity: 0.9;
 }
 
-/* line 238, ../sass/styles.scss */
-.slide.projects-slide {
+/* line 286, ../sass/styles.scss */
+.projects-slide {
   background: url("../images/agsquare.png");
 }
 
-/* line 242, ../sass/styles.scss */
-.slide.footer-slide {
+/* line 291, ../sass/styles.scss */
+.footer-slide {
   background: #333;
 }
