--- a/assets/sass/styles.scss
+++ b/assets/sass/styles.scss
@@ -24,6 +24,12 @@ $divider-color: #CCC;
 	transform: translateY(-50%);
 }
 
+.flex-center {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
 
 body, html, .container {
 	margin: 0px;
@@ -37,15 +43,26 @@ body, html, .container {
 	display: inline-block;
 	text-align: center;
 }
+.max-width-container-small {
+	max-width: 700px;
+	@extend .max-width-container;
+}
 
 
 .slide {
 	text-align: center;
 	min-height: 400px;
-	padding: 40px 0px;
+	padding: 60px 0px;
 
+	// to prevent background from hiding child with negative z-index
+	position: relative;
+	z-index: 0;
 
-	.header {
+	.dark-bg {
+		color: #EEE;
+	}
+
+	h1 {
 		text-align: center;
 		font-family: $raleway-stack;
 		font-size: 34px;
@@ -56,8 +73,13 @@ body, html, .container {
 		border-bottom: 1px solid $divider-color;
 	}
 
-	.header.dark-bg {
-		color: #EEE;
+	h2 {
+		margin-bottom: 10px;
+		margin-top: 20px;
+		font-family: $montserrat-stack;
+		text-transform: uppercase;
+		font-size: 30px;
+		color: #444;
 	}
 
 
@@ -240,20 +262,11 @@ $hero-break-small: 770px;
 
 .themes-slide {
 	@extend .slide;
+	@extend .image-slide;
 
 	background-size: cover !important;
 	background: url('../images/blueGradient.jpg') no-repeat center center fixed;
 
-	.subheader {
-		letter-spacing: 2px;
-		margin-bottom: 10px;
-		margin-top: 20px;
-		font-family: $montserrat-stack;
-		text-transform: uppercase;
-		font-size: 30px;
-		color: #FFF;
-		opacity: 0.7;
-	}
 
 	.theme-frame {
 		padding: 15px;
@@ -286,9 +299,127 @@ $hero-break-small: 770px;
 .projects-slide {
 	@extend .slide;
 	background: url('../images/agsquare.png');
+
+	h1 {
+		font-weight: bold;
+		font-size: 40px;
+	}
+
+	.row {
+		margin: 50px 0;
+
+
+		@media (min-width: 769px) {
+
+			// Flex Center
+			display: flex;
+			align-items: center;
+			justify-content: center;
+		}
+
+		.project-desc {
+			position: relative;
+			top: -15px;
+
+			@media (max-width: 768px) {
+				margin-top: 40px;
+			}
+
+			h2 {
+				font-family: $raleway-stack;
+				font-weight: 300;
+				border-bottom: 1px solid $divider-color;
+				padding-bottom: 3px;
+			}
+
+			p {
+				font-weight: 300;
+				font-size: 1.1em;
+				font-family: $raleway-stack;
+			}
+		}
+
+
+		.fade-in-borders {
+			display: inline-block;
+			width: 100%;
+			max-width: 300px;
+			background: rgba(white, 0.2);
+			transition: background 0.4s;
+
+			z-index: 0;
+			position: relative;
+
+			img.preview {
+				width: 100%;
+				height: auto;
+				opacity: 0.8;
+				transition: opacity 0.4s;
+			}
+			img.preview:hover {
+				opacity: 1;
+			}
+		}
+		.fade-in-borders:hover {
+			background: rgba(white, 0.6);
+		}
+
+	}
+
+
 }
 
 .footer-slide {
 	@extend .slide;
 	background: #333;
+	color: #888;
+	font-weight: 100;
+	font-family: $helvetica-stack;
+
+	.max-width-container {
+		text-align: left;
+	}
+}
+
+
+
+
+.fade-in-borders {
+	padding: 18px;
+	position: relative;
+	height: 100%;
+
+	.fadeInRight, .fadeInLeft, .fadeInUp, .fadeInDown {
+		background: #AAA;
+		position: absolute;
+	}
+
+	// Top Border, Bottom Border
+	.fadeInRight, .fadeInLeft {
+		height: 1px;
+		width: 100%;
+		left: 0px;
+		bottom: 0px;
+		z-index: -1;
+	}
+	.fadeInRight { top: 0px; }
+
+	// So the bottom animates at the same time as the rest
+	.fadeInLeft {
+		height: 100%;
+		background: none;
+		border-bottom: 1px solid #AAA;
+		bottom: 0px;
+	}
+
+	// Right Border, Left Border
+	.fadeInUp, .fadeInDown {
+		width: 1px;
+		height: 100%;
+		top: 0px;
+		bottom: 0px;
+	}
+	.fadeInUp { right: 0px; }
+	.fadeInDown { left: 0px; }
+
 }
