--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -1,20 +1,74 @@
+@charset "UTF-8";
 /* --- Variables --- */
 /* --- Mixins --- */
-/* line 27, ../sass/styles.scss */
+/* line 34, ../sass/styles.scss */
 .flex-center {
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-/* line 34, ../sass/styles.scss */
+/* line 40, ../sass/styles.scss */
+.buffer-top {
+  margin-top: 30px;
+}
+
+/* line 45, ../sass/styles.scss */
 body, html, .container {
   margin: 0px;
   height: 100% !important;
   width: 100% !important;
 }
 
-/* line 40, ../sass/styles.scss */
+/* line 51, ../sass/styles.scss */
+button, a.button {
+  font-family: "Raleway", Helvetica, Arial, Sans-serif;
+  text-transform: uppercase;
+  font-weight: 300;
+  width: 100%;
+  padding: 10px 16px;
+  font-size: 12px;
+  text-align: center;
+  transition: background 0.25s, color 0.15s;
+  max-width: 200px;
+  margin: 15px 5px;
+  border: none;
+  color: #DDD;
+  background-color: rgba(38, 80, 124, 0.8);
+}
+/* line 65, ../sass/styles.scss */
+button:not(.disabled):hover, a.button:not(.disabled):hover {
+  color: white;
+  background-color: #26507c;
+}
+/* line 70, ../sass/styles.scss */
+button.disabled, a.disabled.button {
+  background-color: rgba(38, 80, 124, 0.2);
+}
+/* line 74, ../sass/styles.scss */
+button.red, a.red.button {
+  background-color: rgba(124, 38, 38, 0.8);
+}
+/* line 77, ../sass/styles.scss */
+button.red:not(.disabled):hover, a.red.button:not(.disabled):hover {
+  background-color: #7c2626;
+}
+/* line 80, ../sass/styles.scss */
+button.red.disabled, a.red.disabled.button {
+  background-color: rgba(124, 38, 38, 0.2);
+}
+
+/* line 86, ../sass/styles.scss */
+a.button {
+  display: block;
+  margin: 6px auto 0;
+}
+/* line 91, ../sass/styles.scss */
+a.button:hover {
+  text-decoration: none;
+}
+
+/* line 96, ../sass/styles.scss */
 .max-width-container, .max-width-container-small {
   width: 90%;
   max-width: 950px;
@@ -22,12 +76,12 @@ body, html, .container {
   text-align: center;
 }
 
-/* line 46, ../sass/styles.scss */
+/* line 102, ../sass/styles.scss */
 .max-width-container-small {
   max-width: 700px;
 }
 
-/* line 52, ../sass/styles.scss */
+/* line 108, ../sass/styles.scss */
 .slide, .image-slide, .themes-slide, .title-slide, .about-slide, .projects-slide, .footer-slide {
   text-align: center;
   min-height: 400px;
@@ -35,32 +89,57 @@ body, html, .container {
   position: relative;
   z-index: 0;
 }
-/* line 61, ../sass/styles.scss */
+/* line 117, ../sass/styles.scss */
 .slide .dark-bg, .image-slide .dark-bg, .themes-slide .dark-bg, .title-slide .dark-bg, .about-slide .dark-bg, .projects-slide .dark-bg, .footer-slide .dark-bg {
-  color: #EEE;
+  color: #FAFAFA;
 }
-/* line 65, ../sass/styles.scss */
+/* line 121, ../sass/styles.scss */
 .slide h1, .image-slide h1, .themes-slide h1, .title-slide h1, .about-slide h1, .projects-slide h1, .footer-slide h1 {
-  text-align: center;
   font-family: "Raleway", Helvetica, Arial, Sans-serif;
-  font-size: 34px;
   text-transform: uppercase;
   font-weight: 300;
+  text-align: center;
+  font-size: 34px;
   padding: 6px;
   margin: 30px 0;
   border-bottom: 1px solid #CCC;
 }
-/* line 76, ../sass/styles.scss */
+/* line 129, ../sass/styles.scss */
+.slide h1.heavy, .image-slide h1.heavy, .themes-slide h1.heavy, .title-slide h1.heavy, .about-slide h1.heavy, .projects-slide h1.heavy, .footer-slide h1.heavy {
+  font-size: 40px;
+  font-weight: bold;
+}
+/* line 135, ../sass/styles.scss */
 .slide h2, .image-slide h2, .themes-slide h2, .title-slide h2, .about-slide h2, .projects-slide h2, .footer-slide h2 {
-  margin-bottom: 10px;
-  margin-top: 20px;
-  font-family: "Montserrat", Helvetica, Arial, Sans-serif;
+  font-family: "Raleway", Helvetica, Arial, Sans-serif;
   text-transform: uppercase;
+  font-weight: 300;
   font-size: 30px;
   color: #444;
+  border-bottom: 1px solid #CCC;
+  padding-bottom: 3px;
+}
+/* line 142, ../sass/styles.scss */
+.slide h2 .info, .image-slide h2 .info, .themes-slide h2 .info, .title-slide h2 .info, .about-slide h2 .info, .projects-slide h2 .info, .footer-slide h2 .info {
+  margin-top: 4px;
+  color: #DDD;
+  font-size: 10px;
+  text-transform: capitalize;
+  text-transform: uppercase;
+  font-family: Helvetica, Arial, Sans-serif;
+}
+/* line 150, ../sass/styles.scss */
+.slide h2 .info::before, .image-slide h2 .info::before, .themes-slide h2 .info::before, .title-slide h2 .info::before, .about-slide h2 .info::before, .projects-slide h2 .info::before, .footer-slide h2 .info::before {
+  content: '— ';
+  margin-right: 3px;
+}
+/* line 154, ../sass/styles.scss */
+.slide h2 .info::after, .image-slide h2 .info::after, .themes-slide h2 .info::after, .title-slide h2 .info::after, .about-slide h2 .info::after, .projects-slide h2 .info::after, .footer-slide h2 .info::after {
+  content: ' —';
+  margin-left: 3px;
 }
 
-/* line 92, ../sass/styles.scss */
+/* line 168, ../sass/styles.scss */
 .image-slide .background-filter, .themes-slide .background-filter {
   position: absolute;
   top: 0px;
@@ -71,7 +150,7 @@ body, html, .container {
   opacity: 0.3;
 }
 
-/* line 106, ../sass/styles.scss */
+/* line 182, ../sass/styles.scss */
 .title-slide {
   background-size: cover !important;
   background: url("../images/hero_blur.jpg") no-repeat center center fixed;
@@ -79,7 +158,7 @@ body, html, .container {
   overflow: hidden;
   padding: 0px;
 }
-/* line 118, ../sass/styles.scss */
+/* line 194, ../sass/styles.scss */
 .title-slide .slide-content {
   position: relative;
   top: 50%;
@@ -87,7 +166,7 @@ body, html, .container {
   -ms-transform: translateY(-50%);
   transform: translateY(-50%);
 }
-/* line 121, ../sass/styles.scss */
+/* line 197, ../sass/styles.scss */
 .title-slide .slide-content .slide-header {
   position: relative;
   font-size: 90px;
@@ -97,63 +176,63 @@ body, html, .container {
   font-family: "Montserrat", Helvetica, Arial, Sans-serif;
 }
 @media (max-width: 770px) {
-  /* line 121, ../sass/styles.scss */
+  /* line 197, ../sass/styles.scss */
   .title-slide .slide-content .slide-header {
     font-size: 60px;
   }
 }
 @media (max-width: 550px) {
-  /* line 121, ../sass/styles.scss */
+  /* line 197, ../sass/styles.scss */
   .title-slide .slide-content .slide-header {
     font-size: 45px;
   }
 }
-/* line 137, ../sass/styles.scss */
+/* line 213, ../sass/styles.scss */
 .title-slide .slide-content .divider, .title-slide .slide-content .subtext {
   position: relative;
   top: -25px;
 }
 @media (max-width: 770px) {
-  /* line 137, ../sass/styles.scss */
+  /* line 213, ../sass/styles.scss */
   .title-slide .slide-content .divider, .title-slide .slide-content .subtext {
     top: -15px;
   }
 }
 @media (max-width: 550px) {
-  /* line 137, ../sass/styles.scss */
+  /* line 213, ../sass/styles.scss */
   .title-slide .slide-content .divider, .title-slide .slide-content .subtext {
     top: -10px;
   }
 }
 @media (max-width: 450px) {
-  /* line 137, ../sass/styles.scss */
+  /* line 213, ../sass/styles.scss */
   .title-slide .slide-content .divider, .title-slide .slide-content .subtext {
     top: -8px;
   }
 }
-/* line 155, ../sass/styles.scss */
+/* line 231, ../sass/styles.scss */
 .title-slide .slide-content .divider hr {
   margin-top: 8px;
   margin-bottom: 2px;
 }
 @media (max-width: 770px) {
-  /* line 155, ../sass/styles.scss */
+  /* line 231, ../sass/styles.scss */
   .title-slide .slide-content .divider hr {
     margin-top: 3px;
     margin-bottom: 2px;
   }
 }
-/* line 164, ../sass/styles.scss */
+/* line 240, ../sass/styles.scss */
 .title-slide .slide-content .divider .hr-top {
   width: 750px;
   max-width: 85%;
 }
-/* line 168, ../sass/styles.scss */
+/* line 244, ../sass/styles.scss */
 .title-slide .slide-content .divider .hr-bottom {
   width: 800px;
   max-width: 90%;
 }
-/* line 174, ../sass/styles.scss */
+/* line 250, ../sass/styles.scss */
 .title-slide .slide-content .subtext {
   color: #EEE;
   font-family: "Open Sans", Helvetica, Arial, Sans-serif;
@@ -164,30 +243,30 @@ body, html, .container {
   letter-spacing: 2px;
 }
 @media (max-width: 770px) {
-  /* line 174, ../sass/styles.scss */
+  /* line 250, ../sass/styles.scss */
   .title-slide .slide-content .subtext {
     font-size: 20px;
   }
 }
 @media (max-width: 450px) {
-  /* line 174, ../sass/styles.scss */
+  /* line 250, ../sass/styles.scss */
   .title-slide .slide-content .subtext {
     font-size: 12px;
   }
 }
 
-/* line 198, ../sass/styles.scss */
+/* line 274, ../sass/styles.scss */
 .about-slide {
   -moz-box-shadow: rgba(0, 0, 0, 0.8) 0px 0px 65px;
   -webkit-box-shadow: rgba(0, 0, 0, 0.8) 0px 0px 65px;
   box-shadow: rgba(0, 0, 0, 0.8) 0px 0px 65px;
   background: url("../images/agsquare.png");
 }
-/* line 207, ../sass/styles.scss */
+/* line 283, ../sass/styles.scss */
 .about-slide .skills .skills-col {
   padding: 0px 35px;
 }
-/* line 211, ../sass/styles.scss */
+/* line 287, ../sass/styles.scss */
 .about-slide .skills .icon-description {
   height: 40px;
   line-height: 40px;
@@ -196,25 +275,25 @@ body, html, .container {
   font-weight: 300;
   color: black;
 }
-/* line 220, ../sass/styles.scss */
+/* line 296, ../sass/styles.scss */
 .about-slide .skills img {
   padding-bottom: 26px;
   opacity: 0.8;
   height: 120px;
   width: auto;
 }
-/* line 227, ../sass/styles.scss */
+/* line 303, ../sass/styles.scss */
 .about-slide .skills img:hover {
   opacity: 1;
 }
-/* line 234, ../sass/styles.scss */
+/* line 310, ../sass/styles.scss */
 .about-slide .divider-row .divider {
   margin: 50px auto 70px;
   width: 100%;
   background: #CCC;
   height: 1px;
 }
-/* line 245, ../sass/styles.scss */
+/* line 321, ../sass/styles.scss */
 .about-slide .testimonials blockquote {
   text-align: left;
   border-color: #CCC;
@@ -224,30 +303,45 @@ body, html, .container {
   margin: 14px;
   padding-right: 30px;
 }
-/* line 254, ../sass/styles.scss */
+/* line 330, ../sass/styles.scss */
 .about-slide .testimonials blockquote footer {
   margin-top: 8px;
 }
 
-/* line 263, ../sass/styles.scss */
+/* line 338, ../sass/styles.scss */
 .themes-slide {
   background-size: cover !important;
   background: url("../images/blueGradient.jpg") no-repeat center center fixed;
 }
-/* line 271, ../sass/styles.scss */
+/* line 345, ../sass/styles.scss */
+.themes-slide h1 {
+  position: relative;
+}
+/* line 350, ../sass/styles.scss */
+.themes-slide h2 {
+  letter-spacing: 2px;
+  margin-top: 20px;
+  margin-bottom: 5px;
+  border: none;
+}
+/* line 356, ../sass/styles.scss */
+.themes-slide h2 .info {
+  letter-spacing: 1px;
+}
+/* line 362, ../sass/styles.scss */
 .themes-slide .theme-frame {
-  padding: 15px;
   background: rgba(255, 255, 255, 0.4);
   width: 100%;
   max-width: 350px;
   display: inline-block;
+  margin-bottom: 6px;
 }
-/* line 279, ../sass/styles.scss */
+/* line 371, ../sass/styles.scss */
 .themes-slide .theme-frame .theme-container {
   text-align: center;
   overflow: hidden;
 }
-/* line 283, ../sass/styles.scss */
+/* line 375, ../sass/styles.scss */
 .themes-slide .theme-frame .theme-container img {
   margin: 0 -50%;
   display: inline-block;
@@ -256,57 +350,45 @@ body, html, .container {
   width: auto;
   transition: opacity 0.5s;
 }
-/* line 292, ../sass/styles.scss */
+/* line 384, ../sass/styles.scss */
 .themes-slide .theme-frame .theme-container img:hover {
   opacity: 0.9;
 }
 
-/* line 299, ../sass/styles.scss */
+/* line 391, ../sass/styles.scss */
 .projects-slide {
   background: url("../images/agsquare.png");
 }
-/* line 303, ../sass/styles.scss */
-.projects-slide h1 {
-  font-weight: bold;
-  font-size: 40px;
-}
-/* line 308, ../sass/styles.scss */
+/* line 395, ../sass/styles.scss */
 .projects-slide .row {
   margin: 50px 0;
 }
 @media (min-width: 769px) {
-  /* line 308, ../sass/styles.scss */
+  /* line 395, ../sass/styles.scss */
   .projects-slide .row {
     display: flex;
     align-items: center;
     justify-content: center;
   }
 }
-/* line 320, ../sass/styles.scss */
+/* line 406, ../sass/styles.scss */
 .projects-slide .row .project-desc {
   position: relative;
   top: -15px;
 }
 @media (max-width: 768px) {
-  /* line 320, ../sass/styles.scss */
+  /* line 406, ../sass/styles.scss */
   .projects-slide .row .project-desc {
     margin-top: 40px;
   }
 }
-/* line 328, ../sass/styles.scss */
-.projects-slide .row .project-desc h2 {
-  font-family: "Raleway", Helvetica, Arial, Sans-serif;
-  font-weight: 300;
-  border-bottom: 1px solid #CCC;
-  padding-bottom: 3px;
-}
-/* line 335, ../sass/styles.scss */
+/* line 414, ../sass/styles.scss */
 .projects-slide .row .project-desc p {
   font-weight: 300;
   font-size: 1.1em;
   font-family: "Raleway", Helvetica, Arial, Sans-serif;
 }
-/* line 343, ../sass/styles.scss */
+/* line 422, ../sass/styles.scss */
 .projects-slide .row .fade-in-borders {
   display: inline-block;
   width: 100%;
@@ -316,46 +398,46 @@ body, html, .container {
   z-index: 0;
   position: relative;
 }
-/* line 353, ../sass/styles.scss */
+/* line 432, ../sass/styles.scss */
 .projects-slide .row .fade-in-borders img.preview {
   width: 100%;
   height: auto;
   opacity: 0.8;
   transition: opacity 0.4s;
 }
-/* line 359, ../sass/styles.scss */
+/* line 438, ../sass/styles.scss */
 .projects-slide .row .fade-in-borders img.preview:hover {
   opacity: 1;
 }
-/* line 363, ../sass/styles.scss */
+/* line 442, ../sass/styles.scss */
 .projects-slide .row .fade-in-borders:hover {
   background: rgba(255, 255, 255, 0.6);
 }
 
-/* line 372, ../sass/styles.scss */
+/* line 451, ../sass/styles.scss */
 .footer-slide {
   background: #333;
   color: #888;
   font-weight: 100;
   font-family: Helvetica, Arial, Sans-serif;
 }
-/* line 379, ../sass/styles.scss */
+/* line 458, ../sass/styles.scss */
 .footer-slide .max-width-container, .footer-slide .max-width-container-small {
   text-align: left;
 }
 
-/* line 387, ../sass/styles.scss */
+/* line 466, ../sass/styles.scss */
 .fade-in-borders {
   padding: 18px;
   position: relative;
   height: 100%;
 }
-/* line 392, ../sass/styles.scss */
+/* line 471, ../sass/styles.scss */
 .fade-in-borders .fadeInRight, .fade-in-borders .fadeInLeft, .fade-in-borders .fadeInUp, .fade-in-borders .fadeInDown {
   background: #AAA;
   position: absolute;
 }
-/* line 398, ../sass/styles.scss */
+/* line 477, ../sass/styles.scss */
 .fade-in-borders .fadeInRight, .fade-in-borders .fadeInLeft {
   height: 1px;
   width: 100%;
@@ -363,29 +445,29 @@ body, html, .container {
   bottom: 0px;
   z-index: -1;
 }
-/* line 405, ../sass/styles.scss */
+/* line 484, ../sass/styles.scss */
 .fade-in-borders .fadeInRight {
   top: 0px;
 }
-/* line 408, ../sass/styles.scss */
+/* line 487, ../sass/styles.scss */
 .fade-in-borders .fadeInLeft {
   height: 100%;
   background: none;
   border-bottom: 1px solid #AAA;
   bottom: 0px;
 }
-/* line 416, ../sass/styles.scss */
+/* line 495, ../sass/styles.scss */
 .fade-in-borders .fadeInUp, .fade-in-borders .fadeInDown {
   width: 1px;
   height: 100%;
   top: 0px;
   bottom: 0px;
 }
-/* line 422, ../sass/styles.scss */
+/* line 501, ../sass/styles.scss */
 .fade-in-borders .fadeInUp {
   right: 0px;
 }
-/* line 423, ../sass/styles.scss */
+/* line 502, ../sass/styles.scss */
 .fade-in-borders .fadeInDown {
   left: 0px;
 }
